Add limit filter

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <header class = "jumbotron">
   <div class="container">
-    <h1>Vice Blog</h1>
+    <h1>{{#link-to 'index'}}Vice Blog {{/link-to}}</h1>
   </div>
 </header>
 <nav class="navbar navbar-default">
