--- a/app/templates/components/update-post.hbs
+++ b/app/templates/components/update-post.hbs
@@ -12,6 +12,11 @@
       </div>
 
       <div class="">
+        <label for="author">Author</label>
+        {{input value=author id="author1" placeholder=post.author class="form-control"}}
+      </div>
+
+      <div class="">
         <label for="category">Category</label>
         {{input value=category id="category1" placeholder=post.category class="form-control"}}
       </div>
