--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -5,6 +5,11 @@
   </div>
 
   <div class="form-group">
+    <label for="author">Author</label>
+    {{input value=author id="author"}}
+  </div>
+
+  <div class="form-group">
     <label for="body">Body</label>
     {{textarea cols="80" rows="6" value=body id="body" class="form-control"}}
   </div>
